eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Board_Limits_v1__c.object
<CustomObject>
    <fields>
        <fullName>Accounting__c</fullName>
        <label>Accounting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Advertising_Public_Relations_Marketing__c</fullName>
        <label>Advertising, Public Relations,Marketing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aerospace_and_Defence__c</fullName>
        <label>Aerospace and Defence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AfterSchoolReligiousInstructionBP__c</fullName>
        <label>AfterSchoolReligiousInstructionBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicantsMaxBP__c</fullName>
        <label>ApplicantsMaxBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicantsMinBP__c</fullName>
        <label>ApplicantsMinBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Automotive__c</fullName>
        <label>Automotive</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aviation_and_Airlines__c</fullName>
        <label>Aviation and Airlines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTLDDTargetWeek__c</fullName>
        <label>BTLDDTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTLSancTargetWeek__c</fullName>
        <label>BTLSancTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTLSubTargetWeek__c</fullName>
        <label>BTLSubTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTLWrittenTargetWeek__c</fullName>
        <label>BTLWrittenTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL__c</fullName>
        <label>BTL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banking__c</fullName>
        <label>Banking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Biotechnology__c</fullName>
        <label>Biotechnology</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BirthdayCelebrationPresentsBP__c</fullName>
        <label>BirthdayCelebrationPresentsBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board_Limits_v2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP MI</label>
        <referenceTo>HPP_MI__c</referenceTo>
        <relationshipLabel>Board Limits</relationshipLabel>
        <relationshipName>Board_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Risk_Credit_Committee__c</fullName>
        <label>Board Risk Credit Committee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BuildingInsuranceBP__c</fullName>
        <label>BuildingInsuranceBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <label>CPF</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CarBreakdownBP__c</fullName>
        <label>CarBreakdownBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CarInsuranceBP__c</fullName>
        <label>CarInsuranceBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CarServicingBP__c</fullName>
        <label>CarServicingBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CarTaxBP__c</fullName>
        <label>CarTaxBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CharitableDonationsBP__c</fullName>
        <label>CharitableDonationsBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chief_Risk_Officer__c</fullName>
        <label>Chief Risk Officer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clergy__c</fullName>
        <label>Clergy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ClothingBP__c</fullName>
        <label>ClothingBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_and_Installation__c</fullName>
        <label>Construction and Installation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consulting_Services__c</fullName>
        <label>Consulting Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContentsInsuranceBP__c</fullName>
        <label>ContentsInsuranceBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CouncilTaxBP__c</fullName>
        <label>CouncilTaxBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Committee__c</fullName>
        <label>Credit Committee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBS_Target_Month_PR__c</fullName>
        <formula>Percentage__c  *  DBS_Target_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBS Target Month PR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBS_Target_Month__c</fullName>
        <label>DBS Target Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBS_Target_Week__c</fullName>
        <label>DBS Target Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDMonthTargetBTL__c</fullName>
        <label>DDMonthTargetBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDMonthTargetPRBTL__c</fullName>
        <formula>Percentage__c * DDMonthTargetBTL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDMonthTargetPRBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDMonthTargetPR__c</fullName>
        <formula>Percentage__c  *  DDMonthTarget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDMonthTargetPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDMonthTarget__c</fullName>
        <label>DDMonthTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DPSTargetMTD__c</fullName>
        <formula>Percentage__c  *  DPSTargetMonth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPSTargetMTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPSTargetMonth__c</fullName>
        <label>DPSTargetMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPSTargetWeek__c</fullName>
        <label>DPSTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DependantsMaxBP__c</fullName>
        <label>DependantsMaxBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DependantsMinBP__c</fullName>
        <label>DependantsMinBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drawdown_Weekly_Target__c</fullName>
        <label>Drawdown Weekly Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>East_England__c</fullName>
        <label>East  England</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>East_Midlands__c</fullName>
        <label>East Midlands</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ElectricityBP__c</fullName>
        <label>ElectricityBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_and_Utilities__c</fullName>
        <label>Energy and Utilities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <label>Engineering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilities_Maintenance_and_Repair__c</fullName>
        <label>Facilities, Maintenance and Repair</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Services__c</fullName>
        <label>Financial Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fire_Law_Enforcement_and_Security__c</fullName>
        <label>Fire, Law Enforcement and Security</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FoodBP__c</fullName>
        <label>FoodBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_and_Tobacco__c</fullName>
        <label>Food, Beverage and Tobacco</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GCC__c</fullName>
        <label>GCC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GamingBP__c</fullName>
        <label>GamingBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GasBP__c</fullName>
        <label>GasBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GoingOutBP__c</fullName>
        <label>GoingOutBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Government_and_Local_Authority__c</fullName>
        <label>Government and Local Authority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GymHealthClubBP__c</fullName>
        <label>GymHealthClubBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPPSancTargetWeek__c</fullName>
        <label>HPPSancTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPPSubmTargetWeek__c</fullName>
        <label>HPPSubTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPPWrittenTargetWeek__c</fullName>
        <label>HPPWrittenTargetWeek</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP__c</fullName>
        <label>HPP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Head_of_Credit__c</fullName>
        <label>Head of Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthInsurance__c</fullName>
        <label>HealthInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Healthcare_Administrative__c</fullName>
        <label>Healthcare - Administrative</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Healthcare_Nursing__c</fullName>
        <label>Healthcare - Nursing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Healthcare_Practitioners__c</fullName>
        <label>Healthcare - Practitioners</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Healthcare_Technicians__c</fullName>
        <label>Healthcare - Technicians</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HomeTelephoneBP__c</fullName>
        <label>HomeTelephoneBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMT_Target_Month_PR__c</fullName>
        <formula>Percentage__c  *  IMT_Target_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMT Target Month PR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMT_Target_Month__c</fullName>
        <label>IMT Target Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMT_Target_Week__c</fullName>
        <label>IMT Target Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_All__c</fullName>
        <label>IT -- All</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IT_Computers_Hardware__c</fullName>
        <label>IT -- Computers, Hardware</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IT_Software__c</fullName>
        <label>IT --  Software</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IncomeProtectionBP__c</fullName>
        <label>IncomeProtectionBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InternetBP__c</fullName>
        <label>InternetBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Underwriter__c</fullName>
        <label>Lead Underwriter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Services__c</fullName>
        <label>Legal Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LifeInsuranceBP__c</fullName>
        <label>LifeInsuranceBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>London_Central__c</fullName>
        <label>London Central</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>London_East__c</fullName>
        <label>London East</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>London_North__c</fullName>
        <label>London North</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>London_South__c</fullName>
        <label>London South</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>London_West__c</fullName>
        <label>London West</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Managing_Director__c</fullName>
        <label>Head of Credit/CRO/CEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <label>Manufacturing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Media_Broadcast__c</fullName>
        <label>Media -- Broadcast</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Media_Print__c</fullName>
        <label>Media -- Print</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mining__c</fullName>
        <label>Mining</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MobilePhoneBO__c</fullName>
        <label>MobilePhoneBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Profit_and_Social_Services__c</fullName>
        <label>Non-Profit and Social Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>North_West__c</fullName>
        <label>North West</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>North__c</fullName>
        <label>North</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_days__c</fullName>
        <formula>DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCommitmentsBP__c</fullName>
        <label>OtherCommitmentsBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <formula>DAY(today()) / DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%OfMonthCompleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Care_and_Services__c</fullName>
        <label>Personal Care and Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PetExpensesBP__c</fullName>
        <label>PetExpensesBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PetrolDieselBP__c</fullName>
        <label>PetrolDieselBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmaceuticals__c</fullName>
        <label>Pharmaceuticals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Real_Estate__c</fullName>
        <label>Real Estate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RegularInvestmentBP__c</fullName>
        <label>RegularInvestmentBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Wholesale__c</fullName>
        <label>Retail / Wholesale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retaurants_and_Food_Services__c</fullName>
        <label>Retaurants and Food Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SancMonthTargetBTL__c</fullName>
        <label>SancMonthTargetBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SancMonthTargetPRBTL__c</fullName>
        <formula>Percentage__c * SancMonthTargetBTL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SancMonthTargetPRBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SancMonthTargetPR__c</fullName>
        <formula>Percentage__c  *  SancMonthTarget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SancMonthTargetPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SancMonthTarget__c</fullName>
        <label>SancMonthTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SchoolFeesBP__c</fullName>
        <label>SchoolFeesBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Science_and_Research__c</fullName>
        <label>Science and Research</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scotland__c</fullName>
        <label>Scotland</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Senior_Underwriter__c</fullName>
        <label>Senior Underwriter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SkyCableOtherBP__c</fullName>
        <label>SkyCableOtherBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>South_East__c</fullName>
        <label>South East</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SportingTicketsBP__c</fullName>
        <label>SportingTicketsBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sports_and_Recreation__c</fullName>
        <label>Sports and Recreation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubmMonthTargetBTL__c</fullName>
        <label>SubmMonthTargetBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmMonthTargetPRBTL__c</fullName>
        <formula>Percentage__c * SancMonthTargetBTL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubmMonthTargetPRBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmMonthTargetPR__c</fullName>
        <formula>Percentage__c  *  SubmMonthTarget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubmMonthTargetPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmMonthTarget__c</fullName>
        <label>SubmMonthTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubscriptionsBP__c</fullName>
        <label>SubscriptionsBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TVLicenceBP__c</fullName>
        <label>TVLicenceBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telecommunications__c</fullName>
        <label>Telecommunications</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transportation_and_Warehousing__c</fullName>
        <label>Transportation and Warehousing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TravelExpensesBP__c</fullName>
        <label>TravelExpensesBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelInsurance__c</fullName>
        <label>TravelInsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <label>Underwriter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wales__c</fullName>
        <label>Wales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WaterBP__c</fullName>
        <label>WaterBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>West_England__c</fullName>
        <label>West England</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>West_Midlands__c</fullName>
        <label>West Midlands</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WrittenMonthTargetBTL__c</fullName>
        <label>WrittenMonthTargetBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WrittenMonthTargetPRBTL__c</fullName>
        <formula>Percentage__c * WrittenMonthTargetBTL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WrittenMonthTargetPRBTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WrittenMonthTargetPR__c</fullName>
        <formula>Percentage__c * WrittenMonthTarget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WrittenMonthTargetPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WrittenMonthTarget__c</fullName>
        <label>WrittenMonthTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2Applicants0_1Dependants__c</fullName>
        <defaultValue>60</defaultValue>
        <label>2Applicants0-1Dependants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2Applicants2_3Dependants__c</fullName>
        <label>2Applicants2-3Dependants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2Applicants3_Dependants__c</fullName>
        <label>2Applicants3+Dependants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2_Head_of_Credit_CRO_CEO__c</fullName>
        <defaultValue>2000000</defaultValue>
        <label>2 Head of Credit/CRO/CEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yorks_Hside__c</fullName>
        <label>Yorks &amp; Hside</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>hpp_tARGET__c</fullName>
        <defaultValue>3292015</defaultValue>
        <label>HPP Target</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Board Limits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Board_Limits</fullName>
        <columns>NAME</columns>
        <columns>X2Applicants0_1Dependants__c</columns>
        <columns>X2Applicants2_3Dependants__c</columns>
        <columns>X2Applicants3_Dependants__c</columns>
        <columns>X3Applicants0_1Dependants__c</columns>
        <columns>X3Applicants2_3Dependants__c</columns>
        <columns>X3Applicants3_Dependants__c</columns>
        <columns>X4Applicants0_1Dependants__c</columns>
        <columns>X4Applicants2_3Dependants__c</columns>
        <columns>X4Applicants3_Dependants__c</columns>
        <filterScope>Everything</filterScope>
        <label>Board Limits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Board Limit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Limits</pluralLabel>
    <recordTypes>
        <fullName>Limits_of_Authority</fullName>
        <active>true</active>
        <description>Limits of authority record type for underwriting</description>
        <label>Limits of Authority</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>